@@ -1,23 +1,19 @@
 package fpt.swp.springmvctt.itp.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
-
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 @Configuration
 public class WebConfig implements WebMvcConfigurer {
+    @Value("${app.upload-dir:uploads/assets/img}")
+    private String uploadDir;
 
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
-        // 1) Tài nguyên tĩnh trong classpath (CSS/JS/ảnh sẵn có)
-        registry.addResourceHandler("/assets/**")
-                .addResourceLocations("classpath:/assets/");
-
-
-        String uploadRoot = Paths.get("uploads").toAbsolutePath().toString().replace("\\", "/");
-        registry.addResourceHandler("/uploads/**")
-                .addResourceLocations("file:" + uploadRoot + "/");
+        String abs = Path.of(uploadDir).toAbsolutePath().normalize().toString().replace("\\","/");
+        registry.addResourceHandler("/assets/img/**").addResourceLocations("file:" + abs + "/");
     }
 }
